--- a/auth_api/python/requirements.txt
+++ b/auth_api/python/requirements.txt
@@ -1,1 +1,22 @@
-Flask
+atomicwrites==1.4.0
+attrs==21.2.0
+autopep8==1.5.7
+click==8.0.1
+colorama==0.4.4
+Flask==2.0.1
+iniconfig==1.1.1
+itsdangerous==2.0.1
+Jinja2==3.0.1
+MarkupSafe==2.0.1
+mysql-connector-python==8.0.26
+packaging==21.0
+pluggy==0.13.1
+protobuf==3.17.3
+py==1.10.0
+pycodestyle==2.7.0
+PyJWT==2.1.0
+pyparsing==2.4.7
+pytest==6.2.4
+six==1.16.0
+toml==0.10.2
+Werkzeug==2.0.1
